# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------
set(TSD_SRC_PATH
    ${TOP_DIR}/src/tsd
)

add_library(intf_tsd_llt_pub INTERFACE)
target_include_directories(intf_tsd_llt_pub INTERFACE
  ${CANN_3RD_LIB_PATH}/mockcpp_src/include
  ${CANN_3RD_LIB_PATH}/boost-1.87.0
)
target_compile_definitions(intf_tsd_llt_pub INTERFACE
  _GLIBCXX_USE_CXX11_ABI=0
)
target_compile_options(intf_tsd_llt_pub INTERFACE
  $<$<COMPILE_LANGUAGE:CXX>:-std=c++17>
  -fpermissive
  -Wall
  $<$<BOOL:${ENABLE_GCOV}>:-fprofile-arcs -ftest-coverage>
  $<$<BOOL:${ENABLE_ASAN}>:-fsanitize=address -fno-omit-frame-pointer -static-libasan -fsanitize=undefined -static-libubsan -fsanitize=leak -static-libtsan>
  $<$<STREQUAL: ${CMAKE_SYSTEM_PROCESSOR}, aarch64>:-falign-functions=32>
  -fno-inline
)
target_link_options(intf_tsd_llt_pub INTERFACE
  $<$<BOOL:${ENABLE_GCOV}>:-fprofile-arcs -ftest-coverage>
  $<$<BOOL:${ENABLE_ASAN}>:-fsanitize=address -static-libasan -fsanitize=undefined  -static-libubsan -fsanitize=leak -static-libtsan>

)
target_link_libraries(intf_tsd_llt_pub INTERFACE
    GTest::gtest
    ${CANN_3RD_LIB_PATH}/mockcpp/lib/libmockcpp.a
)

add_subdirectory(tsdclient)
set(TSD_UT_TARGET
  tsd_client_utest
)
add_custom_target(tsd_ut DEPENDS ${TSD_UT_TARGET})