# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

####################### 预准备 ###########################
set(ADUMP_ADUMP_DIR ${CMAKE_CURRENT_LIST_DIR})
set(INSTALL_LIBRARY_DIR lib)
set(ADUMP_CMAKE_DIR ${CMAKE_CURRENT_LIST_DIR}/adump_cmake)

####################### 预准备: 构建生成依赖的proto源码文件 ###########################
set(adumpHostProto
    "${ADUMP_DIR}/proto/dump_task.proto"
)

protobuf_generate(adumpHostProto adumpHostProtoSrcs adumpHostProtoHeaders ${adumpHostProto} TARGET)

# op_mapping_v2.proto: 兼容性设计，不能直接在op_mapping.proto新增字段，影响其他组件运行
set(adumpBaseProtoList
    "${ADUMP_DIR}/proto/op_mapping.proto"
    "${ADUMP_DIR}/proto/op_mapping_v2.proto"
)

protobuf_generate(ascend_dump_protos adumpBaseProtoSrcs adumpBaseProtoHeaders ${adumpBaseProtoList} TARGET)

############################ adump_headers ############################
add_library(adump_headers INTERFACE)

target_include_directories(adump_headers INTERFACE
    $<BUILD_INTERFACE:${ADUMP_DIR}/inc>
    $<BUILD_INTERFACE:${ADUMP_DIR}/inc/adump>
    $<BUILD_INTERFACE:${ADUMP_DIR}/inc/stackcore>
    $<BUILD_INTERFACE:${ADUMP_DIR}/external>
    $<BUILD_INTERFACE:${ADUMP_DIR}/inc/metadef>
    $<BUILD_INTERFACE:${ADUMP_DIR}/inc/metadef/external>
    $<BUILD_INTERFACE:${PROJECT_TOP_DIR}/include/external>
    $<BUILD_INTERFACE:${PROJECT_TOP_DIR}/pkg_inc/dump>
    ${RUNTIME_DIR}/src/dfx/error_manager
    $<INSTALL_INTERFACE:include>
    $<INSTALL_INTERFACE:include/adump>
    $<INSTALL_INTERFACE:include/adump/external>
)

########################### build artifacts ##########################
if(PRODUCT)
    if(PRODUCT STREQUAL "ascend031")
        include(adump_ascend031/adump_server.cmake)
        include(adump_ascend031/ascend_dump.cmake)
        include(adump_ascend031/adump.cmake)
    elseif(ENABLE_NPUF10 STREQUAL true OR
            PRODUCT STREQUAL "npuf10" OR
            PRODUCT STREQUAL "ascend310rc" OR
            PRODUCT STREQUAL "ascend310Brcesl" OR
            PRODUCT STREQUAL "ascend310Brcemu")
        include(adump_cmake/adump_couple/adump_server.cmake)
        include(adump_cmake/adump_couple/ascend_dump.cmake)
        include(adump_cmake/adump_couple/adump.cmake)
    elseif(PRODUCT STREQUAL "ascend610" OR
            PRODUCT STREQUAL "ascend610Lite" OR
            PRODUCT STREQUAL "ascend610Liteesl" OR
            PRODUCT STREQUAL "as31xm1" OR
            PRODUCT STREQUAL "ascend035" OR
            PRODUCT STREQUAL "mc62cm12a" OR
            PRODUCT STREQUAL "mc62cm12aesl")
        include(adump_cmake/adump_couple/adump_server.cmake)
        include(adump_cmake/adump_couple/ascend_dump.cmake)
        include(adump_cmake/adump_couple/adump.cmake)
    elseif(PRODUCT STREQUAL "ascend310Brc")
        include(adump_cmake/adump_couple/adump_server.cmake)
        include(adump_cmake/adump_couple/ascend_dump.cmake)
        include(adump_cmake/adump_couple/adump.cmake)

    elseif(PRODUCT STREQUAL "ascend" OR
            PRODUCT STREQUAL "helper310p" OR
            PRODUCT STREQUAL "ascend310" OR
            PRODUCT STREQUAL "ascend310B" OR
            PRODUCT STREQUAL "ascend310Besl" OR
            PRODUCT STREQUAL "ascend310Bemu" OR
            PRODUCT STREQUAL "ascend310p" OR
            PRODUCT STREQUAL "ascend910" OR
            PRODUCT STREQUAL "ascend920" OR
            PRODUCT STREQUAL "ascend920esl" OR
            PRODUCT STREQUAL "ascend920emu" OR
            PRODUCT STREQUAL "ascend910B" OR
            PRODUCT STREQUAL "ascend910_93" OR
            PRODUCT STREQUAL "ascend950" OR
            PRODUCT STREQUAL "ascend950esl" OR
            PRODUCT STREQUAL "ascend910_96" OR
            PRODUCT STREQUAL "ascend910_96esl")
        include(adump_cmake/adump_decouple/adump_server.cmake)
        include(adump_cmake/adump_decouple/ascend_dump.cmake)
        include(adump_cmake/adump_decouple/adump.cmake)
    elseif(PRODUCT STREQUAL "ascend310B" OR
            PRODUCT STREQUAL "ascend310p" OR
            PRODUCT STREQUAL "ascend910" OR
            PRODUCT STREQUAL "ascend910B" OR
            PRODUCT STREQUAL "ascend910_93")
        include(adump_cmake/adump_decouple/adump_server.cmake)
        include(adump_cmake/adump_decouple/ascend_dump.cmake)
        include(adump_cmake/adump_decouple/adump.cmake)
    else()
        message(STATUS "Unknown PRODUCT[${PRODUCT}], will build artifacts with default stragety")
        include(adump_cmake/adump_decouple/adump_server.cmake)
        include(adump_cmake/adump_decouple/ascend_dump.cmake)
        include(adump_cmake/adump_decouple/adump.cmake)
    endif()
else()
    message(STATUS "No PRODUCT, will build artifacts with default stragety")
    include(adump_cmake/adump_decouple/adump_server.cmake)
    include(adump_cmake/adump_decouple/ascend_dump.cmake)
    if (ENABLE_NPUF10 STREQUAL true)
        include(adump_cmake/adump_couple/adump.cmake)
    endif()
endif()
